@@ -1,3 +1,5 @@
+2006/5/19 -- released version 20060519_trunk
+
 2006/5/18 -- released version 20060518_trunk
 
 2006/5/17 -- released version 20060517_trunk
